added column event brite

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -14,6 +14,7 @@
   <%= f.input :when, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } ,label: 'When and how?'%>
   <%= f.input :what, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } ,label: 'What is needed?'%>
   <%= f.input :who, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } , label: 'Who can join?'%>
+  <%= f.input :event_brite, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } , label: 'Event Brite link'%>
   <%= f.input :photo, as: :file %>
 
 
