--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -26,7 +26,7 @@
           <div class="card justify-content-center justify-content-md-center text-md-start text-center">
               <h1 class="fs-1"><i>Workshop:</i> <%= @course.title %></h1>
               <p class="fs-4"><%= @course.description %></p>
-              <a class="btn btn-flat align-self-center align-self-md-start sign-up" href="https://bit.ly/arduino-workshop-free">Sign Up Now</a>
+              <a class="btn btn-flat align-self-center align-self-md-start sign-up" href=<%= @course.event_brite %>>Register Now</a>
           </div>
         </div>
 
